@@ -1,5 +1,6 @@
 SVN from 0.70:
         - Fixed 'set' and 'add' commands (see ticket #102).
+        - Added 'error' and 'warn' hook commands (see ticket #103).
 
 0.70 from 0.69:
         - Rebuild: Merged DMD 1.020.
